[project]
name = "yuanbao-route-export"
version = "0.1.0"
description = "Export Tencent Yuanbao public recording shares to Markdown."
requires-python = ">=3.10"
dependencies = [
  "Flask==3.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["yuanbao_exporter"]
